--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,39 +1,41 @@
-<!-- main layout -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
-  <link rel="stylesheet" type='text/css' href="/css/style.css">
+  <title>Studdy Buddy</title>
+  <link rel="stylesheet" href="/stylesheets/css/style.css">
 </head>
 
-<body class="flex-column min-100-vh">
-  <nav class="navbar">
-    <ul>
-      <li class="li-inline nav-item"><a href="/">Home</a></li>
-      <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-      <li class="li-inline nav-item"><a href="/login">Login</a></li>
-      <li class="li-inline nav-item"><a href="/logout" id="logout-link">Logout</a></li>
-    </ul>
-  </nav>
-  <header class="hero">
-    <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
-  </header>
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>
+        <a href="/">home</a>
+      </h1>
+      <nav>
+        {{#if loggedIn}}
+        <a href="/dashboard">dashboard</a>
+        <button id="logout" class="btn-no-style logout">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <div class="site-row">
+      <div class="site-name">
+        <h1>Studdy Buddy</h1>
+      </div>
+    </div>
+    <main>
+      {{{ body }}}
+    </main>
+  </div>
 
-  <main class="col-auto">
-    {{{body}}}
-  </main>
-
-  <footer class="flex-row justify-center">
-    &copy; The Tech Blog Folks
-  </footer>
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
-
-</html>
-<script src="/js/logout.js"></script>
-
-
 
 </html>
