added widget bot code back

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,10 @@
+<header class="hero">
+    <h1 class="app-title"><a href="/dashboard">Your Dashboard</a></h1>
+    <widgetbot server="1078388531136823316" channel="355719584830980096" width="800" height="600">
+    </widgetbot>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+    </div>
+</header>
 <ul class="post-list">
     {{#each posts as |post|}}
     <li>
