--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -11,6 +11,15 @@
                     <label for="post-title">Title</label>
                     <input type="text" id="post-title" name="post-title" />
                 </div>
+                <label for="category">Category:</label>
+                <select name="category" id="category">
+                    <option value="JavaScript">JavaScript</option>
+                    <option value="HTML">HTML</option>
+                    <option value="CSS">CSS</option>
+                    <option value="Node.js">Node.js</option>
+                    <option value="SQL">SQL</option>
+                    <option value="Express.js">Express.js</option>
+                </select>
                 <div class="post-content">
                     <label for="post-content">Content</label>
                     <textarea class="entry-field" id="post-content" name="post-content"></textarea>
