--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,17 +1,30 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
+<a href="/" class="go-back"> &larr; Back to home</a>
 
 <article class="new-page">
   <section class="edit-form-page">
     <div class="form-heading">
-      <h2>
-        Edit Post
-      </h2>
+      <h2>Edit Post</h2>
     </div>
     <div class="form-section">
       <form class="edit-post-form">
         <div class="post-title-section">
           <label for="post-title">Title</label>
           <input type="text" name="post-title" id="post-title" value="{{post.title}}" />
+        </div>
+        <div class="post-category">
+          <label for="post-category">Category</label>
+          <select name="post-category" id="post-category">
+            <option value="">Select a category</option>
+            <option value="JavaScript" {{#if (equal post.category "JavaScript" )}}selected{{/if}}>JavaScript</option>
+            <option value="HTML" {{#if (equal post.category "HTML" )}}selected{{/if}}>HTML</option>
+            <option value="CSS" {{#if (equal post.category "CSS" )}}selected{{/if}}>CSS</option>
+            <option value="Node.js" {{#if (equal post.category "Node.js" )}}selected{{/if}}>Node.js</option>
+            <option value="MySQL" {{#if (equal post.category "MySQL" )}}selected{{/if}}>MySQL</option>
+            <option value="MongoDB" {{#if (equal post.category "MongoDB" )}}selected{{/if}}>MongoDB</option>
+            <option value="Express.js" {{#if (equal post.category "Express.js" )}}selected{{/if}}>Express.js</option>
+            <option value="React.js" {{#if (equal post.category "React.js" )}}selected{{/if}}>React.js</option>
+            <option value="Other" {{#if (equal post.category "Other" )}}selected{{/if}}>Other</option>
+          </select>
         </div>
         <div class="post-content">
           <label for="post-content">Content</label>
