--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,11 @@
 <section class="new-post-section">
   <button type="submit" class="btn" id="create-new-post">+ Create new post</button>
 </section>
+<div class="hero">
+  <widgetbot server="1078390559804231682" channel="1078390560445972632" width="1100" height="300">
+  </widgetbot>
+  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+</div>
 
 
 {{#if posts.length}}
